[gd_scene load_steps=14 format=3 uid="uid://dg53lhvlxxxp6"]

[ext_resource type="Script" path="res://assets/scenes/unlock_box.gd" id="1_r21s8"]
[ext_resource type="FontFile" uid="uid://bjb84osbphrfm" path="res://assets/fonts/Molot.otf" id="2_vgeyo"]
[ext_resource type="StyleBox" uid="uid://cfhvhlgsfrnl4" path="res://assets/scenes/button-hover.tres" id="3_3asdk"]
[ext_resource type="FontFile" uid="uid://gd31212bsk4m" path="res://assets/fonts/Montserrat-VariableFont_wght.ttf" id="3_xc8ug"]
[ext_resource type="StyleBox" uid="uid://bokxtfpcpnfwc" path="res://assets/scenes/button-normal.tres" id="4_l0cns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egqm2"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_u0o2g"]
base_font = ExtResource("2_vgeyo")
variation_opentype = {
2003265652: 600
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfin2"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjxhp"]
bg_color = Color(0.273873, 0.273873, 0.273873, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvrns"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_ibu3e"]
base_font = ExtResource("3_xc8ug")
variation_opentype = {
2003265652: 300
}
baseline_offset = 0.5

[sub_resource type="FontVariation" id="FontVariation_p3jlm"]
base_font = ExtResource("3_xc8ug")
variation_opentype = {
2003265652: 400
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfcl6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="UnlockBox" type="PanelContainer"]
z_index = 2
custom_minimum_size = Vector2(600, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -527.0
offset_bottom = -588.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_egqm2")
script = ExtResource("1_r21s8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="title" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_u0o2g")
theme_override_font_sizes/font_size = 32
text = "Fountain	"

[node name="spacer" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="close" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vgeyo")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_lfin2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bjxhp")
theme_override_styles/normal = SubResource("StyleBoxFlat_lvrns")
text = "X"

[node name="description" type="RichTextLabel" parent="VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_ibu3e")
theme_override_font_sizes/normal_font_size = 24
text = "Enter the code to unlock \"Fountain\":"
fit_content = true

[node name="input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.497474, 0.497474, 0.497474, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_p3jlm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_tfcl6")
placeholder_text = "••••"

[node name="unlock" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vgeyo")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = ExtResource("3_3asdk")
theme_override_styles/normal = ExtResource("4_l0cns")
text = "Unlock"

[node name="feedback" type="RichTextLabel" parent="VBoxContainer"]
visible = false
self_modulate = Color(0, 0, 0, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_ibu3e")
theme_override_font_sizes/normal_font_size = 24
text = "This code is wrong."
fit_content = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/unlock" to="." method="_on_unlock_pressed"]
